--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "license-report": "^6.8.0",
     "motion": "^12.23.22",
+    "polished": "^4.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
